Source/WebCore/page/CaptionUserPreferencesMediaAF.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012, 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2012-2015 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -64,8 +64,10 @@ public:
 
     virtual String captionsStyleSheetOverride() const override;
     virtual int textTrackSelectionScore(TextTrack*, HTMLMediaElement*) const override;
-    virtual Vector<RefPtr<TextTrack>> sortedTrackListForMenu(TextTrackList*) override;
-    virtual String displayNameForTrack(TextTrack*) const override;
+    Vector<RefPtr<AudioTrack>> sortedTrackListForMenu(AudioTrackList*) override;
+    Vector<RefPtr<TextTrack>> sortedTrackListForMenu(TextTrackList*) override;
+    String displayNameForTrack(AudioTrack*) const override;
+    String displayNameForTrack(TextTrack*) const override;
 
 private:
 #if HAVE(MEDIA_ACCESSIBILITY_FRAMEWORK)
